feat(api): 添加Intent API控制器和精度调度器
- 新增IntentController实现创建、查询、修改、取消和立即触发Intent的功能
- 添加CreateIntentRequest和PatchIntentRequest数据传输对象
- 实现IntentValidator进行请求参数验证
- 添加ValidationResult用于验证结果处理
- 新增IntentResponse用于API响应
- 实现BucketGroup和BucketGroupManager支持多精度档位任务调度
- 添加PrecisionScheduler支持虚拟线程池和分层调度
- 迁移BatchDispatcher到application包并增强异常处理
- 添加JVM配置文件支持原生访问和模块开放
- 实现幂等性检查和状态转换机制