@@ -1,166 +1,53 @@
-# LoomQ
+# LoomQ - High-Performance Standalone Delayed Task Scheduler
 
-[![Java 25](https://img.shields.io/badge/Java-25_LTS-blue)](https://openjdk.org/projects/jdk/25/)
-[![License](https://img.shields.io/badge/License-Apache%202.0-green.svg)](LICENSE)
-[![Tests](https://img.shields.io/badge/Tests-400%2B%20passed-brightgreen)]()
+[![JDK](https://img.shields.io/badge/JDK-25%2B-green.svg)](https://openjdk.org/)
+[![Maven Central](https://img.shields.io/badge/Maven%20Central-0.6.x-blue.svg)](https://central.sonatype.com/)
+[![License](https://img.shields.io/badge/License-Apache%202.0-blue.svg)](https://opensource.org/licenses/Apache-2.0)
+[![Tests](https://img.shields.io/badge/Tests-367%20passed-brightgreen.svg)]()
 
-> **High-Performance Delayed Task Queue Engine**
->
-> Pure Java 25 implementation with Virtual Threads, WAL persistence, and zero external dependencies.
-> No Redis. No RabbitMQ. Just one JAR.
+**Making future events happen reliably, powered by Java 21+ Virtual Threads.**
 
-[中文文档](README.zh.md)
+LoomQ is a high-performance standalone delayed task scheduling engine. It is not a general-purpose message queue or workflow engine—its core value proposition is ensuring that future events occur reliably at the appointed time.
+
+> **Note:** v0.6.x is the performance milestone for the standalone version. Future releases will focus on distributed deployment and an embeddable core.
 
 ---
 
-## Why LoomQ?
+## Core Features
 
-### The Problem
-
-Traditional delayed task solutions have significant overhead:
-
-| Solution | Write QPS | Memory/Task | Dependencies |
-|----------|-----------|-------------|--------------|
-| Redis ZSET | ~100K | ~1KB | Redis cluster |
-| RabbitMQ DLX | ~50K | ~2KB | MQ cluster |
-| Quartz (JDBC) | ~10K | ~1KB | Database |
-
-### The LoomQ Advantage
-
-| Metric | LoomQ | 10x Better |
-|--------|-------|------------|
-| **Write Throughput** | **400K+ QPS** | vs 40K (RabbitMQ) |
-| **Read Throughput** | **500K+ QPS** | vs 50K (Redis) |
-| **Memory per Task** | **~200 bytes** | vs 2KB (Redis) |
-| **Dependencies** | **None** | vs Redis/MQ cluster |
-| **Deployment** | **Single JAR** | vs Multi-node cluster |
+| Feature | Description |
+|---------|-------------|
+| **Five Precision Tiers** | ULTRA (10ms), FAST (50ms), HIGH (100ms), STANDARD (500ms), ECONOMY (1000ms) — choose the right precision for your use case |
+| **Durable Persistence** | ASYNC mode for <100ms RPO, DURABLE mode for zero data loss |
+| **Virtual Threads Native** | Zero thread pool tuning, handle millions of concurrent delayed tasks effortlessly |
+| **O(1) Expiration** | Time-wheel bucket expiration with constant time complexity |
+| **Netty HTTP Layer** | High-performance HTTP server with memory-mapped zero-copy WAL |
+| **Observability** | Prometheus metrics + HdrHistogram high-precision latency statistics |
 
 ---
 
 ## Performance Benchmarks
 
-### HTTP API Performance (v0.6.0)
+**Test Environment:** JDK 25, NVMe SSD, 16 cores, localhost
 
-Netty + Hand-written JSON Serializer + Virtual Threads
+### Write Throughput
 
-```
-┌─────────────────────────────────────────────────────────────────────────┐
-│                    LoomQ v0.6.0 Benchmark Results                       │
-├─────────────────────────────────────────────────────────────────────────┤
-│ Test Environment: Windows 11, JDK 25, 22 cores, 8GB heap               │
-├─────────────────┬──────────────┬──────────────┬──────────────┬─────────┤
-│ Endpoint        │ Peak QPS     │ P50 Latency  │ P99 Latency  │ Threads │
-├─────────────────┼──────────────┼──────────────┼──────────────┼─────────┤
-│ POST /intents   │   41,786     │    2ms       │    7ms       │   100   │
-│ GET /intents/{id}│   55,585     │    3ms       │    6ms       │   200   │
-│ GET /health     │   61,279     │    1ms       │    3ms       │   100   │
-└─────────────────┴──────────────┴──────────────┴──────────────┴─────────┘
-```
+| Mode | QPS | Description |
+|------|-----|-------------|
+| ASYNC | **424,077** | Returns immediately after publish, RPO < 100ms |
+| DURABLE | **>150,000** | Returns after WAL fsync, RPO = 0 |
 
-### Core Engine Performance
+### End-to-End Trigger Performance (50 concurrent threads)
 
-| Component | Throughput | Description |
-|-----------|------------|-------------|
-| **RingBuffer** | 18.8M ops/s | Lock-free MPSC queue for WAL |
-| **IntentStore** | 1.1M ops/s | ConcurrentHashMap, no lock contention |
-| **JSON Serializer** | 7x faster than Jackson | Hand-written zero-copy serialization |
+| Tier | Window | QPS | Efficiency | P99 Latency | Use Case |
+|------|--------|-----|------------|-------------|----------|
+| ULTRA | 10ms | 45,949 | 2.5% | ≤15ms | Distributed lock renewal |
+| FAST | 50ms | 44,718 | 5% | ≤60ms | Message retry, backoff |
+| HIGH | 100ms | 40,710 | 10% | ≤120ms | Default tier |
+| STANDARD | 500ms | 39,974 | 25% | ≤550ms | **Recommended**, order timeout |
+| ECONOMY | 1000ms | 42,295 | 25% | ≤1100ms | Massive long-delay tasks |
 
-### JSON Serialization Optimization (v0.6.0)
-
-```
-┌──────────────────────────────────────────────────────────────┐
-│ Serialization Performance Comparison                         │
-├─────────────────────────┬────────────────┬──────────────────┤
-│ Implementation          │ Latency (ns)   │ Speedup          │
-├─────────────────────────┼────────────────┼──────────────────┤
-│ Jackson ObjectMapper    │    14,229      │    1.0x          │
-│ Hand-written Serializer │     2,309      │    6.2x          │
-└─────────────────────────┴────────────────┴──────────────────┘
-```
-
-**How we did it:**
-- Pre-defined byte array templates for JSON structure
-- Direct `ByteBuf` write, zero intermediate `byte[]` copy
-- Fast-path string serialization (no escape needed for most cases)
-
----
-
-## Architecture
-
-### Design Philosophy
-
-```
-Traditional Approach:
-┌─────────────────────────────────────────────────────────────┐
-│ Task → Priority Queue → Poller Thread → Worker Thread Pool  │
-│                                                             │
-│ Problems:                                                   │
-│ • Priority Queue: O(log n) insertion, lock contention      │
-│ • Poller Thread: CPU spin or sleep latency                 │
-│ • Worker Pool: Fixed size, requires tuning                 │
-└─────────────────────────────────────────────────────────────┘
-
-LoomQ Approach:
-┌─────────────────────────────────────────────────────────────┐
-│ Task → Virtual Thread.sleep(delay) → Execute callback       │
-│                                                             │
-│ Why it works:                                               │
-│ • Virtual thread parked: ~200 bytes (vs 1MB platform)       │
-│ • 1M sleeping virtual threads = ~200MB heap                 │
-│ • Carrier threads managed by JVM                            │
-│ • No global data structure → No lock contention             │
-└─────────────────────────────────────────────────────────────┘
-```
-
-### System Architecture
-
-```
-┌─────────────────────────────────────────────────────────────────────────┐
-│                           API Layer                                      │
-│  ┌────────────────────────────────────────────────────────────────────┐ │
-│  │  Netty HTTP Server (4 I/O threads + Virtual Thread business pool) │ │
-│  │  • Zero-copy JSON serialization                                   │ │
-│  │  • RadixTree routing                                              │ │
-│  │  • Semaphore backpressure                                         │ │
-│  └────────────────────────────────────────────────────────────────────┘ │
-└─────────────────────────────────────────────────────────────────────────┘
-                                    │
-                                    ▼
-┌─────────────────────────────────────────────────────────────────────────┐
-│                        Core Engine                                       │
-│  ┌──────────────┐  ┌──────────────┐  ┌──────────────┐  ┌─────────────┐ │
-│  │  RingBuffer  │  │    WAL v2    │  │   Bucket     │  │  Dispatcher │ │
-│  │  64K MPSC    │  │ Group Commit │  │  Scheduler   │  │  Virtual    │ │
-│  │  18M ops/s   │  │  500K QPS    │  │  5 Tiers     │  │  Threads    │ │
-│  └──────────────┘  └──────────────┘  └──────────────┘  └─────────────┘ │
-└─────────────────────────────────────────────────────────────────────────┘
-```
-
-### Precision Tiers
-
-Choose the right precision for your use case:
-
-| Tier | Window | SLO (P99) | Peak QPS | Use Case |
-|------|--------|-----------|----------|----------|
-| `ULTRA` | 10ms | ≤15ms ✅ | **45,949** | Distributed lock renewal |
-| `FAST` | 50ms | ≤60ms ✅ | **44,718** | Message retry, backoff |
-| `HIGH` | 100ms | ≤120ms ✅ | **40,710** | Default tier |
-| `STANDARD` | 500ms | ≤550ms ✅ | **39,974** | **Recommended**, order timeout |
-| `ECONOMY` | 1000ms | ≤1100ms ✅ | **42,295** | Massive long-delay tasks |
-
-**Performance by Thread Count:**
-
-```
-┌──────────────┬──────────────┬──────────────┬──────────────┬──────────────┐
-│ Tier         │  50 threads  │ 100 threads  │ 200 threads  │ 400 threads  │
-├──────────────┼──────────────┼──────────────┼──────────────┼──────────────┤
-│ ULTRA        │     30,622   │     45,949   │     43,911   │     43,267   │
-│ FAST         │     39,544   │     44,718   │     41,140   │     37,379   │
-│ HIGH         │     40,710   │     37,222   │     37,252   │     34,937   │
-│ STANDARD     │     39,974   │     39,945   │     38,994   │     38,823   │
-│ ECONOMY      │     41,220   │     42,295   │     39,641   │     38,903   │
-└──────────────┴──────────────┴──────────────┴──────────────┴──────────────┘
-```
+**Key Insight:** ECONOMY tier achieves 10x per-thread efficiency compared to ULTRA, making it ideal for massive long-delay tasks.
 
 ---
 
@@ -168,197 +55,185 @@ Choose the right precision for your use case:
 
 ### Prerequisites
 
-- Java 21+ (required for virtual threads)
-- Maven 3.8+
+- JDK 25+ (no `--enable-preview` required)
+- Maven 3.9+
 
-### Build
+### Maven Dependency
+
+```xml
+<dependency>
+    <groupId>com.loomq</groupId>
+    <artifactId>loomq-core</artifactId>
+    <version>0.6.2</version>
+</dependency>
+```
+
+### Build from Source
 
 ```bash
+git clone https://github.com/loomq/loomq.git
+cd loomq
 mvn clean package -DskipTests
 ```
 
-### Run
+### Start Server
 
 ```bash
-java -jar target/loomq-0.6.0.jar
+java -jar target/loomq-0.6.2.jar
 ```
 
-### Create Intent
+Server starts at `http://localhost:8080` by default.
+
+### Create Your First Delayed Task
 
 ```bash
+# Create an intent that triggers in 30 seconds
 curl -X POST http://localhost:8080/v1/intents \
   -H "Content-Type: application/json" \
   -d '{
-    "executeAt": "2026-04-10T12:30:00Z",
-    "deadline": "2026-04-10T12:35:00Z",
-    "shardKey": "order-12345",
+    "executeAt": "'$(date -u -d "+30 seconds" +%Y-%m-%dT%H:%M:%SZ)'",
     "precisionTier": "STANDARD",
     "callback": {
-      "url": "https://api.example.com/webhook"
+      "url": "http://your-server/callback",
+      "method": "POST"
     }
   }'
 ```
 
-Response:
-```json
-{
-  "intentId": "550e8400-e29b-41d4-a716-446655440000",
-  "status": "SCHEDULED",
-  "executeAt": "2026-04-10T12:30:00Z",
-  "deadline": "2026-04-10T12:35:00Z",
-  "precisionTier": "STANDARD",
-  "ackLevel": "DURABLE"
-}
+### Check Task Status
+
+```bash
+curl http://localhost:8080/v1/intents/{intentId}
 ```
+
+---
+
+## Precision Tiers
+
+| Tier | Window | Max Delay | Recommended Concurrency | Batch Strategy | Use Case |
+|------|--------|-----------|------------------------|----------------|----------|
+| ULTRA | 10ms | <1min | 10-50 | Single task | Distributed lock renewal, heartbeat |
+| FAST | 50ms | <5min | 50-100 | Small batch | Message retry, exponential backoff |
+| HIGH | 100ms | <30min | 100-500 | Medium batch | Default choice, general purpose |
+| STANDARD | 500ms | <24h | 500-2000 | Large batch | **Recommended**, order timeout, scheduled notifications |
+| ECONOMY | 1000ms | >24h | 2000+ | Massive batch | Long-delay tasks, data retention policies |
+
+**Selection Guide:**
+- For distributed locks: **ULTRA** or **FAST**
+- For order timeouts: **STANDARD** (best balance)
+- For massive long-delay tasks: **ECONOMY**
+
+---
+
+## Architecture Highlights
+
+LoomQ is built on first-principles thinking for maximum performance:
+
+### Virtual Thread Sleep Instead of Priority Queue
+
+Traditional schedulers use priority queues (heap) with O(log n) insertion and centralized locks. LoomQ uses virtual threads that sleep until execution time—no locks, no heap operations, just pure OS-level scheduling.
+
+```
+Traditional:  insert(heap) → O(log n) + lock contention
+LoomQ:        virtualThread.sleep(until) → O(1), no locks
+```
+
+### MemorySegment + StripedCondition
+
+Zero object allocation for waiting. Uses `MemorySegment` for direct memory access and `StripedCondition` for striped condition variables—eliminating the "thundering herd" problem on wake-up.
+
+### Batch Delivery & Resource Isolation
+
+Low-precision tiers (STANDARD, ECONOMY) benefit from automatic batch collection and delivery, achieving 10x per-thread efficiency compared to high-precision tiers.
 
 ---
 
 ## API Reference
 
-### Create Intent
+| Method | Endpoint | Description |
+|--------|----------|-------------|
+| POST | `/v1/intents` | Create a delayed task |
+| GET | `/v1/intents/{id}` | Get task status |
+| PATCH | `/v1/intents/{id}` | Update task |
+| POST | `/v1/intents/{id}/cancel` | Cancel task |
+| POST | `/v1/intents/{id}/fire-now` | Trigger immediately |
+| GET | `/health` | Health check |
+| GET | `/metrics` | Prometheus metrics |
 
-```http
-POST /v1/intents
-Content-Type: application/json
+### Request Body
 
+```json
 {
-  "intentId": "optional-custom-id",
-  "executeAt": "2026-04-10T12:30:00Z",
-  "deadline": "2026-04-10T12:35:00Z",
-  "shardKey": "order-12345",
+  "executeAt": "2024-01-15T10:30:00Z",
+  "deadline": "2024-01-15T11:00:00Z",
   "precisionTier": "STANDARD",
   "ackLevel": "DURABLE",
   "callback": {
-    "url": "https://api.example.com/webhook",
+    "url": "http://your-server/callback",
     "method": "POST",
-    "headers": {"X-Source": "loomq"}
-  },
-  "redelivery": {
-    "maxAttempts": 5,
-    "backoff": "exponential",
-    "initialDelayMs": 1000
+    "headers": {"X-Request-Id": "123"},
+    "body": "{\"event\": \"timeout\"}"
   }
 }
 ```
 
-### Get Intent
-
-```http
-GET /v1/intents/{intentId}
-```
-
-### Cancel Intent
-
-```http
-POST /v1/intents/{intentId}/cancel
-```
-
-### Trigger Immediately
-
-```http
-POST /v1/intents/{intentId}/fire-now
-```
-
-### Health Check
-
-```http
-GET /health
-```
-
 ---
 
-## Configuration
+## Known Limitations
 
-```yaml
-# application.yml
-server:
-  port: 8080
+LoomQ v0.6.x is designed for standalone deployment with the following limitations:
 
-wal:
-  data_dir: "./data/wal"
-  flush_strategy: "batch"
-  batch_flush_interval_ms: 100
-
-scheduler:
-  max_pending_tasks: 1000000
-
-dispatcher:
-  max_concurrent_dispatches: 1000
-```
-
-### Acknowledgment Levels
-
-| Level | Description | RPO | Latency |
-|-------|-------------|-----|---------|
-| `ASYNC` | Return after memory queue | <100ms | <1ms |
-| `DURABLE` | Return after WAL fsync | 0 | <20ms |
-| `REPLICATED` | Return after replica ACK | 0 | <50ms |
-
----
-
-## Competitive Analysis
-
-| Solution | Write QPS | Read QPS | Memory/Task | Dependencies |
-|----------|-----------|----------|-------------|--------------|
-| **LoomQ** | **400K+** | **500K+** | **~200B** | **None** |
-| Redis ZSET | ~100K | ~50K | ~1KB | Redis cluster |
-| RabbitMQ DLX | ~50K | ~50K | ~2KB | MQ cluster |
-| Quartz (JDBC) | ~10K | ~5K | ~1KB | Database |
-
-### Total Cost of Ownership
-
-| Factor | LoomQ | Redis | RabbitMQ |
-|--------|-------|-------|----------|
-| Infrastructure | Single JAR | Cluster | Cluster |
-| Operational Complexity | **Low** | Medium | High |
-| Learning Curve | **Low** | Medium | High |
-| Deployment Time | **Minutes** | Hours | Hours |
-
----
-
-## Test Coverage
-
-```
-┌──────────────────────────────────────────────────────────────┐
-│                    Test Suite Summary                        │
-├─────────────────────────┬────────────┬──────────────────────┤
-│ Category                │ Count      │ Status               │
-├─────────────────────────┼────────────┼──────────────────────┤
-│ Unit Tests              │ 380+       │ ✅ All Pass          │
-│ Integration Tests       │ 15+        │ ✅ All Pass          │
-│ Benchmark Tests         │ 5+         │ ✅ All Pass          │
-├─────────────────────────┼────────────┼──────────────────────┤
-│ Total                   │ 400+       │ ✅ 100% Pass         │
-└─────────────────────────┴────────────┴──────────────────────┘
-```
-
-Run tests:
-```bash
-mvn test                    # Fast feedback
-mvn test -Pfull-tests       # Full verification
-```
+| Limitation | Description |
+|------------|-------------|
+| **No Distributed Replication** | REPLICATED ack level is not yet implemented. For HA, run multiple independent instances behind a load balancer |
+| **Memory-Bound Capacity** | Task capacity is limited by heap memory. ~10M tasks require ~8GB heap |
+| **No Web UI** | Management is via REST API or CLI only |
+| **Single-Node** | No clustering or failover in v0.6.x |
 
 ---
 
 ## Roadmap
 
-| Version | Feature | Status |
-|---------|---------|--------|
-| V0.5 | Intent API, Precision Tiers, Async Replication | ✅ Released |
-| **V0.6** | **Hand-written JSON Serializer, Netty HTTP** | **✅ Current** |
-| V0.7 | Raft Consensus | 📋 Planned |
-| V0.8 | Admin Dashboard | 📋 Planned |
+### v0.7.0
+- Split into `loomq-core` (embeddable) + `loomq-server` (standalone)
+- Plugin-based storage engine (RocksDB, LevelDB support)
+- REST API v2 with OpenAPI spec
+
+### v0.8.0
+- **Loomqex**: Distributed lock shell built on LoomQ (reference implementation)
+- Multi-node clustering with Raft consensus
+- Web-based management console
+
+### Future
+- Cloud-native deployment (Kubernetes operator)
+- Multi-region replication
+- Schema registry for callback payloads
+
+---
+
+## Contributing
+
+We welcome contributions! Please see [CONTRIBUTING.md](CONTRIBUTING.md) for guidelines.
+
+- **Issues**: Report bugs or request features at [GitHub Issues](https://github.com/loomq/loomq/issues)
+- **Pull Requests**: Fork, branch, and submit PRs against `main`
 
 ---
 
 ## License
 
-Apache License 2.0
+```
+Copyright 2024 LoomQ Authors
 
----
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
 
-## Acknowledgments
+    http://www.apache.org/licenses/LICENSE-2.0
 
-- **Java 21 Virtual Threads**: The paradigm shift enabling millions of concurrent tasks
-- **Netty**: High-performance async I/O framework
-- **JEP 444**: For making virtual threads production-ready
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
+```
